CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20252811_2259.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_optimized.exe aco_cuda_optimized.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_optimized.cu(246): warning #68-D: integer conversion resulted in a change of sign
          if (hashTable[idx].key == -1) return -1.0;
                                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_optimized.cu(257): warning #68-D: integer conversion resulted in a change of sign
          unsigned long long old = atomicCAS(&hashTable[idx].key, -1, key);
                                                                  ^

aco_cuda_optimized.cu(258): warning #68-D: integer conversion resulted in a change of sign
          if (old == -1 || old == key) {
                     ^

aco_cuda_optimized.cu(290): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

aco_cuda_optimized.cu(1002): error: expected a ";"
          depositPheromones << <(42 + (256 - 1)) / 256, 256, 0, compute_stream >> > (dev_OF, dev_agent_node, dev_pheromon, dev_kol_enter)
          ^

aco_cuda_optimized.cu(1027): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

aco_cuda_optimized.cu(1059): error: function "run_aco_iterations" has already been defined (previous definition at line 937)
  PerformanceMetrics run_aco_iterations(int num_iterations) {
                     ^

aco_cuda_optimized.cu(1181): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

aco_cuda_optimized.cu(1306): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

aco_cuda_optimized.cu(1612): warning #940-D: missing return statement at end of non-void function "calculate_max_parametr_size_in_gpu_memory"
  }
  ^

aco_cuda_optimized.cu(1820): warning #2464-D: conversion from a string literal to "char *" is deprecated
          print_metrics(metrics, "Original ACO", i);
                                 ^

aco_cuda_optimized.cu(1833): warning #2464-D: conversion from a string literal to "char *" is deprecated
          print_metrics(metrics, "Combined Run", i);
                                 ^

2 errors detected in the compilation of "aco_cuda_optimized.cu".
aco_cuda_optimized.cu
========== COMPILATION END ========== 
Exit code: 2 
